--- a/.github/workflows/manual-build-and-deploy.yml
+++ b/.github/workflows/manual-build-and-deploy.yml
@@ -25,7 +25,11 @@ jobs:
       - name: List Content of dist Folder
         run: ls -R dist
 
-      - name: Deploy to VPS via SSH
+      - name: Clean Old Files on VPS (Optional)
+        run: |
+          ssh -i ${{ secrets.VPS_SSH_KEY }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'rm -rf /home/projects/portfolio/*'
+
+      - name: Deploy to VPS via SCP
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -33,3 +37,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "dist/*"
           target: "/home/projects/portfolio"
+
+      # - name: Restart NGINX (Optional)
+      #   run: |
+      #     ssh -i ${{ secrets.VPS_SSH_KEY }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'sudo systemctl reload nginx'
