fix: untar issue

--- a/.github/workflows/manual-build-and-deploy.yml
+++ b/.github/workflows/manual-build-and-deploy.yml
@@ -22,9 +22,6 @@ jobs:
       - name: Generate Static Pages (SSG)
         run: npm run generate
 
-      # - name: List Content of dist Folder
-      #   run: ls -R dist
-
       - name: Clean Old Files on VPS (Optional)
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -41,11 +38,5 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           source: "dist/*"
           target: "/home/projects/portfolio"
+          strip_components: 1
 
-      # - name: Restart NGINX (Optional)
-      #   uses: appleboy/ssh-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.VPS_HOST }}
-      #     username: ${{ secrets.VPS_USER }}
-      #     password: ${{ secrets.VPS_PASSWORD }}
-      #     script: 'sudo systemctl reload nginx'
