fix: gzip FE files in pipeline

--- a/.github/workflows/manual-build-and-deploy.yml
+++ b/.github/workflows/manual-build-and-deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Generate Static Pages (SSG)
         run: npm run generate
 
+      - name: Compress Static Files
+        run: find ./dist -type f -exec gzip -k -9 {} \;
+      
       - name: Clean Old Files on VPS (Optional)
         uses: appleboy/ssh-action@v0.1.7
         with:
